--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
             </div>
         </div>
     </header>
+    <main>
+        <section class="py-4 py-xl-5">
+            <div class="container">
+                <p class="fs-3">I am Angelina. I am an experienced Python Developer. I help companies reinvent themselves through beautiful and well-commented code.<br></p>
+            </div>
+        </section>
+    </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/Animated-gradient-background.js"></script>
