--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>portfolio</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,700,800&amp;display=swap">
+    <link rel="stylesheet" href="assets/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/Animated-gradient-background-1.css">
     <link rel="stylesheet" href="assets/css/Animated-gradient-background-2.css">
     <link rel="stylesheet" href="assets/css/Animated-gradient-background.css">
@@ -26,6 +27,9 @@
         <section class="py-4 py-xl-5">
             <div class="container">
                 <p class="fs-3">I am Angelina. I am an experienced Python Developer. I help companies reinvent themselves through beautiful and well-commented code.<br></p>
+                <ul class="list-inline mb-0">
+                    <li class="list-inline-item"><a class="btn btn-primary" role="button" href="https://vk.com/arbuzkd"><i class="fab fa-vk" style="height: 18px;width: 18px;transform: scale(1.73);"></i></a></li>
+                </ul>
             </div>
         </section>
     </main>
