'Hire Me!' card
* Add a beautiful card to hire the person

--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
                 </ul>
             </div>
         </section>
+        <section class="py-4 py-xl-5">
+            <div class="container">
+                <div class="banner">
+                    <p class="fs-1">I am currently <strong>available</strong> for hire.<br></p><a class="btn btn-dark btn-lg text-uppercase fw-bold" role="button" href="https://ihrise.a-cx.international/index.php/signin?redirect=https://ihrise.a-cx.international/index.php/team_members/view/2">Hire me&nbsp;<i class="fas fa-chevron-right"></i></a>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
