--- a/index.html
+++ b/index.html
@@ -39,6 +39,31 @@
                 </div>
             </div>
         </section>
+        <section class="py-4 py-xl-5">
+            <div class="container">
+                <h2>Projects</h2>
+                <div class="row row-cols-1 row-cols-md-2 row-cols-xl-3 py-5 projects">
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-1.png"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-2.png"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-3.png"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-4.png"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-5.png"></div>
+                    </div>
+                    <div class="col">
+                        <div class="card"><img class="card-img w-100 d-block" src="assets/img/project-6.png"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
