--- a/index.html
+++ b/index.html
@@ -65,6 +65,23 @@
             </div>
         </section>
     </main>
+    <footer class="py-3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start d-md-flex justify-content-md-start align-items-md-center py-2">
+                    <div>
+                        <p class="fs-5 fw-bold mb-0">Hosted by Abius CompleX</p>
+                        <p class="mb-0">Made in [впиши любимую страну]</p>
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex justify-content-center align-items-center justify-content-md-end py-2">
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item"><a class="btn btn-primary" role="button" href="https://vk.com/arbuzkd"><i class="fab fa-vk" style="height: 18px;width: 18px;transform: scale(1.73);"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="assets/js/Animated-gradient-background.js"></script>
