My comments to my friend

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <header>
         <div data-bss-parallax-bg="true" style="height: 600px;background: center / auto repeat;">
             <div class="container d-flex flex-column justify-content-end align-items-start">
+                <h1>Place here (Div -&gt; Parallax Background) your photo, or just give me a photo I will apply it.</h1>
                 <h1 class="display-3 fw-bold">Angelina Rasumova<br></h1>
                 <p class="fs-2 text-info text-badge mb-5">Python Developer<br></p>
             </div>
@@ -63,6 +64,7 @@
                     </div>
                 </div>
             </div>
+            <h1>Сообщение конкретно для Гелы, которое мы потом удалим: фотки проектов я потом сделаю, но от своих проектов, но если я их добавлю, то ты в них немножко поучаствуешь (скорее всего даже не программистом), ок?</h1>
         </section>
     </main>
     <footer class="py-3">
