--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <div data-bss-parallax-bg="true" style="height: 600px;background: center / auto repeat;">
+        <div data-bss-parallax-bg="true" style="height: 600px;background: url(&quot;https://avatars.mds.yandex.net/i?id=9af7b24256064ac800291ec342c7fc7a-5267107-images-thumbs&amp;n=13&amp;exp=1&quot;) center / auto repeat;">
             <div class="container d-flex flex-column justify-content-end align-items-start">
                 <h1>Place here (Div -&gt; Parallax Background) your photo, or just give me a photo I will apply it.</h1>
                 <h1 class="display-3 fw-bold">Angelina Rasumova<br></h1>
